# snip-snap-csv

./: .gitignore  LICENSE  README.md  build.fish  pyproject.toml  sscsv.nimble
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommands.fish
.github/workflows/: publish-binary-pypi.yaml  publish-release.yaml
src/: sscsv.nim
src/sscsv/: run.py
src/sscsv/commands/: __init__.py  head.py  header.py  select.py  tail.py
src/sscsv/controllers/: CsvController.py  CsvFile.py  DataFrameController.py
src/sscsv/views/: CommandLine.nim  CommandLine.py  DataFrameView.py  TableView.py
