[tool.poetry]
name = "snip-snap-csv"
version = "0.1.0"
description = "A tool designed for rapid data processing and filtering."
authors = ["sumeshi <sum3sh1@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.20.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
