[tool.poetry]
name = "sscsv"
version = "0.0.1"
description = "A tool designed for rapid data processing and filtering."
authors = ["sumeshi <sum3sh1@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
sscsv = 'sscsv.run:main'

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.20.31"
fire = "^0.6.0"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
nuitka = "^2.3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
